--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    compile 'org.slf4j:slf4j-api:1.7.9'
     compile 'org.springframework:spring-webmvc:3.2.2.RELEASE'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.12'
     testCompile group: 'junit', name: 'junit', version: '4.11'
